<resources>
    <string name="app_name">LoginFirebase</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Registar</string>
    <string name="password_corfirm">Confirmar Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>
    <string name="requiervalue">Campo Requerido!</string>
    <string name="error_invalid_email_format">Formato email no valido!</string>
    <string name="error_noequals_passwords">Las Contraseñas no son iguales</string>
</resources>
